--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "moment": "^2.30.1",
+    "mongoose": "^8.3.2",
     "mustache-express": "^1.3.2",
     "nedb": "^1.8.0",
     "nodemon": "^3.1.0"
